--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 constantly==15.1.0
 cryptography==37.0.2
+dj-database-url==0.5.0
 Django==4.0.4
 django-crispy-forms==1.14.0
+django-heroku==0.0.0
 gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.3
@@ -18,6 +20,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pyOpenSSL==22.0.0
+python-decouple==3.6
 requests==2.27.1
 service-identity==21.1.0
 six==1.16.0
@@ -26,13 +29,5 @@ Twisted==22.4.0
 txaio==22.2.1
 typing_extensions==4.2.0
 urllib3==1.26.9
+whitenoise==6.2.0
 zope.interface==5.4.0
-
-
-gunicorn==20.1.0
-Pillow==9.1.0
-psycopg==3.0.13
-python-decouple==3.6
-
-whitenoise==6.1.0
-
