--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 constantly==15.1.0
 cryptography==37.0.2
-
 Django==4.0.4
 django-crispy-forms==1.14.0
 django-heroku==0.0.0
@@ -16,6 +15,7 @@ gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
+psycopg==3.0.14
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
